2007-01-08  Michael McCarty <mkmccarty@gmail.com>
	* V57

	* Added define to the autoconf for MACOSX when the host
	OS is Darwin.  Also added "race.h" as a general include for
	everything so these defines can be used globally

2007-01-07  Michael McCarty <mkmccarty@gmail.com>

	* V56

	* Modify configure.in and a few sources to check for __APPLE__
	at compile time.  I'd like to work off a MACOSX define but couldn't
	figure out how to get that defined from within the autoconf.
	__APPLE__ could theoretically include non OSX Mac's

	* Modified configure.in to use sdl-config on mingw platform.

2007-01-07  Pace Willisson  <pace@rhino.pacew.com>

	* V55

	* don't exit on CDAccess calls

	* V54

	* basic support for cross compiling for windows; use autoconf


2007-01-06  Pace Willisson  <pace@rhino.pacew.com>

	* V53

	* protect against null pointer

	* V52

	* automatically save game into "autosave.sav" every turn

	* V51

	* put some av_block() calls in to keep it from wasting the
	cpu when waiting for keyboard input; don't wave flag over
	text on admin screen

	* V50

	* handle the situation where the video runs out before the
	audio a little better

2007-01-03  Michael McCarty <mkmccarty@gmail.com>

	* V49

	* Fixed an off by one in the main data structure when replacing hard coded
	values with definitions

2007-01-03  Michael McCarty <mkmccarty@gmail.com>

	* V48

	* Replaced fixed value in for_each_player loops with NUM_PLAYERS define

2007-01-03  Michael McCarty <mkmccarty@gmail.com>

	* V47

	* Added data_defs.h to hold common program definitions like NUM_PLAYERS and MAX_MISSIONS
	to possibly make this easier to increase players and missions in the future.

	* Checked uninits in aipur.c and formatted code

2007-01-03  Michael McCarty <mkmccarty@gmail.com>

	* V46

	* verified XXX marked code in future.c

2007-01-03  Michael McCarty <mkmccarty@gmail.com>

	* V45

	* verified non initialized prestige estimator variable in budget.c

	* Added to QUESTIONS and TODO

20

--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 AC_INIT(raceintospace.spec)
 
 dnl Get the operating system and version number...
-dnl uname=`uname`
+uname=`uname`
 
 AC_PROG_CC
 
@@ -10,23 +10,33 @@ AC_CHECK_LIB(asound,main)
 AC_CHECK_LIB(m,main)
 AC_CHECK_LIB(SDL,main)
 
-dnl OS-specific configuration
+dnl cross-compile specific configuration
 case "$target" in
 i386-mingw32msvc)
 	dnl Windows/CygWin configuration
 	LIBS="$LIBS `sdl-config --libs`"
 	PROG_NAME=raceintospace.exe
 	;;
-*-apple-darwin*)
-	dnl Mac OS X configuration
-	CFLAGS="$CFLAGS -DMACOSX"
-	LIBS="$LIBS `sdl-config --libs`"
-	PROG_NAME=raceintospace
-	;;
 *)
-	dnl Unix OSS configuration
-	LIBS="$LIBS `sdl-config --libs`"
+	dnl Everyone else
 	PROG_NAME=raceintospace
+	LIBS="$LIBS `sdl-config --libs`"
+	;;
+esac
+
+case "$uname" in
+Darwin)
+	dnl Darwin/Mac OS X configuration
+	AC_DEFINE(MACOSX)dnl
+	;;
+Linux)
+	dnl Linux OS
+	;;
+CYGWIN*)
+	dnl Cygwin
+	dnl CYGWIN already defines __CYGWIN__
+*)
+	dnl unknown system
 	;;
 esac
 
