2007-01-10  Michael McCarty <k6mmc@users.sourceforge.net>
       * V74

       * Removed all references to 'far', yanked that and 'pascal' from the Makefile

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,7 +7,7 @@ EXTRA_WARNINGS =  -Wextra -Wno-unused-parameter \
 	-Wno-char-subscripts \
 	-Werror
 
-CFLAGS = -g -Wall -Dfar= -Dpascal= -I. `sdl-config --cflags`
+CFLAGS = -g -Wall -I. `sdl-config --cflags`
 
 .c.o:
 	@echo "$(CC) ...flags... -c $*.c"
