--- a/Makefile.in
+++ b/Makefile.in
@@ -57,7 +57,7 @@ BARIS_OBJS = admin.o aimast.o aimis.o aipur.o ast0.o ast1.o	    \
 	ast2.o ast3.o ast4.o budget.o crew.o endgame.o	    \
 	endianness.o \
 	futbub.o future.o hardef.o intel.o intro.o main.o mc2.o mc.o \
-	mis_c.o mis_m.o museum.o name.o newmis.o news.o news_sup.o	    \
+	mis_c.o mis_m.o museum.o newmis.o news.o news_sup.o	    \
 	news_suq.o							    \
 	place.o port.o prefs.o prest.o radar.o rdplex.o records.o \
 	replay.o review.o rush.o start.o   \
