2007-01-12  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
	* V81

	* Changed & optimized av_sync to keep track of changed pixels.
	Now only parts of the screen are updated during redraw (if possible).
	This can get further iff drawing code will use gr & gx routines instead
	of direct memory access.

	* Fixed issues with off-by-one errors in data files. Is it just my copy
	that is broken?

	* Added .indent.pro file with options for indent(1).

	* Added rules to build tags and TAGS files.

--- a/Makefile.in
+++ b/Makefile.in
@@ -95,6 +95,14 @@ sdl.o: sdl.c
 sdltest: sdltest.o
 	$(CC) $(CFLAGS) -o sdltest sdltest.o `sdl-config --libs` -lvorbisfile -lm
 
+FORCE:
+
+tags: FORCE
+	ctags *.[ch]
+
+TAGS: FORCE
+	etags *.[ch]
+
 clean:
 	rm -f *.o *~
 	rm -f raceintospace imgsplit sdltest decode getport
