--- a/race.h.in
+++ b/race.h.in
@@ -1,3 +1,6 @@
-#define HAVE_LIBVORBISFILE 0
-#define MACOSX 0
 
+/* Check if libvorbis file is available */
+#undef HAVE_LIBVORBISFILE
+
+/* Check if building on Mac OS */
+#undef MACOSX
