2007-01-16  Michael McCarty <k6mmc@users.sourceforge.net>
	* V98

	* Renamed SF and SFInfo to  SaveFileHdr SaveFileInfo and moved them to data.h

	* Renamed FDes and a few other cryptic names to something meaningful

	* Added an enum for the Savegame types

	* Changed the Savegame ID type to a uint32_t instead of char[4] and will
	use this to determine the endianness of the save data.

	* Registered with Apple for an Application Signature and got 'RiSP' which
	I'll use with the Mac binaries and as the Savegame ID for endian determination

	* Added application icon on the Mac

	* Moved duplicate macros from museum and replay into macros.h

--- a/Info.plist
+++ b/Info.plist
@@ -4,10 +4,12 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
+	<key>CFBundleDocumentTypes</key>
+	<array/>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>RaceIntoSpace</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.RaceIntoSpaceProject.RaceIntoSpace</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,9 +19,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>RiSP</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>0.2</string>
 	<key>NSMainNibFile</key>
 	<string>SDLMain</string>
 	<key>NSPrincipalClass</key>
