--- a/Makefile.in
+++ b/Makefile.in
@@ -50,8 +50,8 @@ uninstall:
 	rm -rf $(DESTDIR)/usr/share/doc/raceintospace
 	rm -f $(DESTDIR)/usr/share/raceintospace/README
 
-BARIS_HFILES = Buzz_inc.h data.h externs.h mis.h mtype.h	\
-	music.h nn.h pace.h pcx_hdr.h proto.h records.h replay.h \
+BARIS_HFILES = Buzz_inc.h data.h endianness.h externs.h mis.h mtype.h	\
+	macros.h music.h pace.h pcx_hdr.h proto.h records.h replay.h \
 	soundfx.h	\
 	sv_lib.h uc.h soundint.h
 
