2007-01-24  Pace Willisson  <pace@rhino.pacew.com>
	* V109

	* various portability tweaks to get it to compile on Fedora core 5
	again

	* it turns out strcasecmp is not all that standard, so convered
	uses of it, strncasecmp, strcmpi and strncmpi to xstrcasecmp
	and xstrncasecmp, written explicitly in pace.c

	* strdup is also not in c99, so changed implementation of xstrdup
	to avoid it

	* add note about how to run aclocal in DEVELOPER

--- a/Makefile.in
+++ b/Makefile.in
@@ -124,6 +124,8 @@ clean:
 	rm -f *.o *~
 	rm -f raceintospace imgsplit sdltest decode getport
 	rm -f getvab mkmovie mtest vtest
+	rm -f raceintospace.exe
+	rm -f raceintospace.tar.gz
 
 distclean: clean
 	rm -f config.log config.status Makefile race.h
@@ -133,8 +135,3 @@ distclean: clean
 tar:
 	rm -f raceintospace.tar raceintospace.tar.gz
 	tar -czf raceintospace.tar.gz Makefile ChangeLog *.[ch] domount .gdbinit $(EXTRA_SOURCES)
-
-
-
-
-
