2007-01-31  Michael McCarty <k6mmc@users.sourceforge.net>
	* V117

	* Fixed MACOSX builds to use CONFIG_MACOSX

--- a/configure.in
+++ b/configure.in
@@ -50,7 +50,7 @@ esac
 case "$uname" in
 Darwin)
 	dnl Darwin/Mac OS X configuration
-	AC_DEFINE([[MACOSX]])
+	AC_DEFINE([CONFIG_MACOSX])
 	;;
 Linux)
 	dnl Linux OS
