--- a/race.h.in
+++ b/race.h.in
@@ -5,6 +5,7 @@
 #undef CONFIG_MACOSX
 #undef CONFIG_OS2
 #undef CONFIG_WIN32
+#undef CONFIG_THEORA_VIDEO
 #undef HAVE_LIBOGG
 #undef HAVE_LIBVORBIS
 #undef HAVE_LIBVORBISFILE
