--- a/configure.in
+++ b/configure.in
@@ -3,47 +3,76 @@ AC_INIT(raceintospace.spec)
 dnl Specify directory for local macros
 AC_CONFIG_MACRO_DIR([m4])
 
-dnl Get the operating system and version number...
-uname=`uname`
+AC_ARG_ENABLE(theora_video,
+	AC_HELP_STRING([--enable-theora-video],
+		[enable support for theora-encoded video files]),
+	[
+		theora_video=$enableval
+	]
+)
 
 AC_PROG_CC
 AC_C_INLINE
+AC_C_CONST
 AC_C_BIGENDIAN(AC_DEFINE([__BIG_ENDIAN__]))
 
-AC_CHECK_LIB(vorbisfile,main)
-AC_CHECK_LIB(asound,main)
+AC_TYPE_SIZE_T
+AC_TYPE_SSIZE_T
+
 AC_CHECK_LIB(m,main)
-AC_CHECK_LIB([SDL],main)
-dnl avcodec depends on avformat so just test the former
-AC_CHECK_LIB(ogg,ogg_stream_init,
+AC_CHECK_LIB([SDL],main,,
+	AC_MSG_ERROR([SDL]library missing))
+AC_CHECK_LIB(ogg,main,
 [
 	AC_DEFINE([HAVE_LIBOGG])
 	AC_SUBST(have_ogg, yes)
-	AC_CHECK_LIB(theora,theora_decode_init,
+	[LIBS]="-logg $LIBS"
+	AC_CHECK_LIB(theora,main,
 	[
 		AC_DEFINE([HAVE_LIBTHEORA])
 		AC_SUBST(have_theora, yes)
+		[LIBS]="-ltheora $LIBS"
 	])
-	AC_CHECK_LIB(vorbis,vorbis_synthesis,
+	AC_CHECK_LIB(vorbis,main,
 	[
 		AC_DEFINE([HAVE_LIBVORBIS])
 		AC_SUBST(have_vorbis, yes)
+		[LIBS]="-lvorbis $LIBS"
 	])
+	AC_CHECK_LIB(vorbisfile,main)
 ])
+dnl AC_CHECK_LIB(asound,main)
+
+if test "$have_vorbis" = "yes" -a \
+	"$have_vorbis" = "yes" -a \
+	"$theora_video" = "yes"
+then
+	AC_DEFINE([CONFIG_THEORA_VIDEO])
+else
+	if test "$theora_video" = "yes" ; then
+		AC_MSG_WARN([Can't use theora video functionality without ogg, vorbis
+					 and theora libraries])
+	fi
+	theora_video=no
+fi
+AC_SUBST(theora_video)
 
 AX_CREATE_STDINT_H(int_types.h)
+
+dnl Get the operating system and version number...
+uname=`uname`
 
 dnl cross-compile specific configuration
 case "$target" in
 i?86-mingw32msvc)
 	dnl Windows/CygWin configuration
-	LIBS="$LIBS `sdl-config --libs`"
+	dnl LIBS="$LIBS `sdl-config --libs`"
 	PROG_NAME=raceintospace.exe
 	;;
 *)
 	dnl Everyone else
 	PROG_NAME=raceintospace
-	LIBS="$LIBS `sdl-config --libs`"
+	dnl LIBS="$LIBS `sdl-config --libs`"
 	;;
 esac
 
