--- a/configure.in
+++ b/configure.in
@@ -19,9 +19,37 @@ AC_C_BIGENDIAN(AC_DEFINE([__BIG_ENDIAN__]))
 AC_TYPE_SIZE_T
 AC_TYPE_SSIZE_T
 
-AC_CHECK_LIB(m,main)
-AC_CHECK_LIB([SDL],main,,
-	AC_MSG_ERROR([SDL]library missing))
+
+dnl -------------
+dnl Check for SDL
+dnl -------------
+AC_ARG_WITH(sdl,
+						AC_HELP_STRING([--with-sdl],
+													 [use SDL (relies on sdl-config)]
+					 )
+)
+
+AC_PATH_PROG(SDL_CONFIG, sdl-config)
+
+if test "x${with_sdl}" != xno -a "x${SDL_CONFIG}" != x; then
+	SDL_CFLAGS=`$SDL_CONFIG --cflags`
+	save_CPPFLAGS="$CPPFLAGS"
+	CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
+
+	AC_CHECK_HEADER(SDL.h,
+									HAVE_SDL=yes
+									SDL_LIBS=`$SDL_CONFIG --libs`,
+									HAVE_SDL=no
+									)
+
+	CPPFLAGS="$save_CPPFLAGS"
+fi
+AC_SUBST(SDL_CFLAGS)
+AC_SUBST(SDL_LIBS)
+
+dnl -------------
+dnl Check for OGG
+dnl -------------
 AC_CHECK_LIB(ogg,main,
 [
 	AC_DEFINE([HAVE_LIBOGG])
