--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT(raceintospace.spec)
+AC_INIT(Race Into Space,0.3,k6mmc@users.sourceforge.net,raceintospace)
 
 dnl Specify directory for local macros
 AC_CONFIG_MACRO_DIR([m4])
@@ -6,9 +6,7 @@ AC_CONFIG_MACRO_DIR([m4])
 AC_ARG_ENABLE(theora_video,
 	AC_HELP_STRING([--enable-theora-video],
 		[enable support for theora-encoded video files]),
-	[
 		theora_video=$enableval
-	]
 )
 
 AC_PROG_CC
@@ -19,67 +17,65 @@ AC_C_BIGENDIAN(AC_DEFINE([__BIG_ENDIAN__]))
 AC_TYPE_SIZE_T
 AC_TYPE_SSIZE_T
 
+AC_CHECK_LIB(m,main)
 
-dnl -------------
+dnl ----------------
 dnl Check for SDL
-dnl -------------
-AC_ARG_WITH(sdl,
-						AC_HELP_STRING([--with-sdl],
-													 [use SDL (relies on sdl-config)]
-					 )
-)
+dnl ----------------
 
-AC_PATH_PROG(SDL_CONFIG, sdl-config)
+dnl FIXME: what exact version is enough???
+AM_PATH_SDL(1.2.0,:,
+	AC_MSG_ERROR([[*** SDL library is required ***]]))
 
-if test "x${with_sdl}" != xno -a "x${SDL_CONFIG}" != x; then
-	SDL_CFLAGS=`$SDL_CONFIG --cflags`
-	save_CPPFLAGS="$CPPFLAGS"
-	CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
+dnl ---------------------------
+dnl Check for OGG and friends
+dnl ---------------------------
 
-	AC_CHECK_HEADER(SDL.h,
-									HAVE_SDL=yes
-									SDL_LIBS=`$SDL_CONFIG --libs`,
-									HAVE_SDL=no
-									)
+XIPH_PATH_OGG(
+	[
+		have_ogg=yes
+		AC_DEFINE([HAVE_LIBOGG])
+	],
+	have_ogg=no)
+AC_SUBST(have_ogg)
 
-	CPPFLAGS="$save_CPPFLAGS"
-fi
-AC_SUBST(SDL_CFLAGS)
-AC_SUBST(SDL_LIBS)
+XIPH_PATH_VORBIS(
+	[
+		have_vorbis=yes
+		AC_DEFINE([HAVE_LIBVORBIS])
+	],
+	have_vorbis=no)
+AC_SUBST(have_vorbis)
 
-dnl -------------
-dnl Check for OGG
-dnl -------------
-AC_CHECK_LIB(ogg,main,
-[
-	AC_DEFINE([HAVE_LIBOGG])
-	AC_SUBST(have_ogg, yes)
-	[LIBS]="-logg $LIBS"
-	AC_CHECK_LIB(theora,main,
+AC_CHECK_LIB(theora,main,
 	[
 		AC_DEFINE([HAVE_LIBTHEORA])
-		AC_SUBST(have_theora, yes)
+		have_theora=yes
 		[LIBS]="-ltheora $LIBS"
-	])
-	AC_CHECK_LIB(vorbis,main,
-	[
-		AC_DEFINE([HAVE_LIBVORBIS])
-		AC_SUBST(have_vorbis, yes)
-		[LIBS]="-lvorbis $LIBS"
-	])
-	AC_CHECK_LIB(vorbisfile,main)
-])
-dnl AC_CHECK_LIB(asound,main)
+	],
+	have_theora=no)
+AC_SUBST(have_theora)
 
-if test "$have_vorbis" = "yes" -a \
-	"$have_vorbis" = "yes" -a \
-	"$theora_video" = "yes"
+dnl We'll drop that dependency shortly
+AC_CHECK_LIB(vorbisfile,main,
+	[
+		have_vorbisfile=yes
+		AC_DEFINE([HAVE_LIBVORBISFILE])
+	],
+	have_vorbisfile=no)
+AC_SUBST(have_vorbisfile)
+
+if test "x$have_vorbis" = xyes -a \
+	"x$have_vorbis" = xyes -a \
+	"x$have_theora" = xyes -a \
+	"x$theora_video" = xyes
 then
 	AC_DEFINE([CONFIG_THEORA_VIDEO])
 else
-	if test "$theora_video" = "yes" ; then
-		AC_MSG_WARN([Can't use theora video functionality without ogg, vorbis
-					 and theora libraries])
+	if test "x$theora_video" = xyes ; then
+		AC_MSG_WARN(
+			[[*** theora video unavailable, using old frm files ***]]
+		)
 	fi
 	theora_video=no
 fi
@@ -91,16 +87,16 @@ dnl Get the operating system and version number...
 uname=`uname`
 
 dnl cross-compile specific configuration
-case "$target" in
+case "$host" in
 i?86-mingw32msvc)
 	dnl Windows/CygWin configuration
-	dnl LIBS="$LIBS `sdl-config --libs`"
-	PROG_NAME=raceintospace.exe
+	dnl LIBS="`i386-mingw32msvc-sdl-config --libs` $LIBS"
+	dnl PROG_NAME=raceintospace.exe
 	;;
 *)
 	dnl Everyone else
-	PROG_NAME=raceintospace
-	dnl LIBS="$LIBS `sdl-config --libs`"
+	dnl PROG_NAME=raceintospace
+	dnl LIBS="`sdl-config --libs` $LIBS"
 	;;
 esac
 
