2007-02-06  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
	* V121

	* Quick fix for huge memory leak (5MB each turn) in news.c

	* Fix in Makefile.in

--- a/Makefile.in
+++ b/Makefile.in
@@ -120,13 +120,13 @@ cscope: FORCE
 
 clean:
 	rm -f *.o *~
-	rm -f int_types.h race.h
 	rm -f $(PROG_NAME)
 	rm -f $(PROGS)
 	rm -f $(TAR_NAME).*
 
 distclean: clean
-	rm -f config.log config.status Makefile race.h
+	rm -f config.log config.status Makefile
+	rm -f int_types.h race.h
 	rm -f configure
 	rm -rf autom4te.cache
 
