2007-02-10	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
	* V129

	* New algorithm for tracking graphics updates and lot of changes here and
	there to get it working.

	* Few improvements in mmfile implementation

	* New script to encode raw->ogg

	* Made fades and audio optional (cmdline options -f -a)

	* Updated manpage, probably should be moved to section 6

--- a/Makefile.in
+++ b/Makefile.in
@@ -76,7 +76,7 @@ uninstall:
 # cheat, we still use CC but print LD
 $(PROG_NAME): $(BARIS_OBJS)
 	@echo "$(LD) ...flags... -o $@ ...libs..."
-	@$(CC) $(LDLAGS) -o $(PROG_NAME) $(BARIS_OBJS) $(LIBS)
+	@$(CC) $(LDFLAGS) -o $(PROG_NAME) $(BARIS_OBJS) $(LIBS)
 
 .c.o:
 	@echo "$(CC) ...flags... -c $*.c"
