2007-02-12  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
	* V131

	* New utilities mknews.c and news2raw.pl for extracting video and audio
	from news files.

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,2 +1,14 @@
+CFLAGS += -O2 -I.. -Wall
+
+VPATH = ..
+
+.PHONY: all clean
+
+all: mkmovie mknews
+
+clean:
+	-rm *.o mkmovie mknews
+
 mkmovie : mkmovie.c
-	$(CC) mkmovie.c -o mkmovie
+
+mknews : mknews.o gamedata.o
